# Projectionist

./: .env.example  Dockerfile  README.md  projectionist.py  pyproject.toml
.github/workflows/: ci.yml
handlers/: __init__.py  events.py  tmdb.py
